--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header> <!--Información de Bienvenida-->
         <section id="imagenPrincipal"> 
              <h1 class="principal">El círculo mágico</h1>
-             <h2 class="TopP"> Una experiencia del Aprendizaje a través del juego</h2>
+             <h2 class="TopP"> Una experiencia del Aprendizaje a través del juego para la primera infancia
+             </h2>
         </section>
         <section>
             <nav>
