Agregar nueva rama pruebaBT

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <main>
     <section class="IntroIndex"><!--Sección principal y de bienvenida-->
         <article><!--Video Introductorio a la página-->
-            <div class=IntroIndex__Video><iframe width="560" height="315" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+            <div class=IntroIndex__Video><iframe width="560" height="315" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <p>pruebaBT</p> 
         </article>
       
         <article class=IntroIndex__Texto> <!--En un cuadro a la derecha se pondra la misión y visión-->
