--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <article class=IntroIndex__Texto> <!--En un cuadro a la derecha se pondra la misión y visión-->
         <div>
             <h3>Misión</h3>
-        <p>Aquí debería de decir la misión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam vitae sapiente voluptatem officiis molestiae omnis maiores repudiandae eos corrupti voluptatibus iste ex reiciendis, doloribus odit veniam officia id tempore!</p>
+        <p>Brindar un espacio libre y seguro de aprendizaje a través del juego a niños y niñas, donde puedan desarrollar su máximo pontencial</p>
         </div>
         <div>
             <h3>Visión</h3>
