--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header> <!--Información de Bienvenida-->
         <section id="imagenPrincipal"> 
-             <h1 class="principal">El círculo mágico</h1>
+             <h1 class="principal">El círculo mágico BT</h1>
              <h2 class="TopP"> Una experiencia del Aprendizaje a través del juego para la primera infancia
              </h2>
         </section>
