--- a/pages/cuidadoresprimarios.html
+++ b/pages/cuidadoresprimarios.html
@@ -12,21 +12,41 @@
 
 <body>
     <header> <!--Información de Bienvenida-->
-        <section id="fondogalaxia">
-        <h1 class="Other">Cuidadores primarios</h1>
-        <h2 class="Top">Aprendiendo a generar círculos mágicos</h2>
-        </section>
+        
         <section>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../index.html">Inicio </a></li>
-                    <li><a href="niñosyniñas.html">Niños y Niñas </a></li>
-                    <li><a href="cuidadoresprimarios.html">Cuidadores Primarios </a></li>
-                    <li><a href="agenteseducativos.html">Agentes Educativos </a></li>
-                    <li><a href="contacto.html">Contacto </a></li>
-                </ul>
-            </nav>
-        </section>    
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="../index.html">Inicio </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="niñosyniñas.html">Niños y Niñas </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link"href="agenteseducativos.html">Agentes Educativos </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link"href="contacto.html">Contacto  </a>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>           
+        </section>   
+        <section id="fondogalaxia">
+            <h1 class="Other">Cuidadores primarios</h1>
+            <h2 class="Top">Aprendiendo a generar círculos mágicos</h2>
+            </section> 
     </header>
     <main id="gradiente1">
             <section class="IntroCp">
