--- a/pages/niñosyniñas.html
+++ b/pages/niñosyniñas.html
@@ -11,18 +11,41 @@
 </head>
 <body id="fondogalaxia">
     <header> <!--Información de Bienvenida-->
-        <section id="fondogalaxia">
-        <h1 class="Other">El círculo mágico para niños y niñas</h1>
-        </section>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../index.html">Inicio </a></li>
-                    <li><a href="niñosyniñas.html">Niños y Niñas </a></li>
-                    <li><a href="cuidadoresprimarios.html">Cuidadores Primarios </a></li>
-                    <li><a href="agenteseducativos.html">Agentes Educativos </a></li>
-                    <li><a href="contacto.html">Contacto </a></li>
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="../index.html">Inicio </a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="niñosyniñas.html">Niños y Niñas </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"href="agenteseducativos.html">Agentes Educativos </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"href="contacto.html">Contacto  </a>
+                  </li>
                 </ul>
-            </nav>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav>           
+        <nav>
+        <ul class="menu"> 
+            
+        <section id="fondogalaxia">
+            <h1 class="Other">El círculo mágico para niños y niñas</h1>
+        </section>   
     </header>
 <main id="gradiente1">
     <section class="IntroNN">
