--- a/pages/niñosyniñas.html
+++ b/pages/niñosyniñas.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niños y Niñas</title>
+    <meta name="description" content="Conoce más sobre el Círculo Mágico y descubré más sobre el aprendizaje a través del juego en la primera infancia">
+    <meta name="keywords"  content="CIRCULO MAGICO, JUEGO, APRENDIZAJE, INFANCIA, PRIMERA INFANCIA,NIÑOS Y NIÑAS, CUIDADORES PRIMARIOS, AGENTES EDUCATIVOS, MAESTROS, GAMIFICACION">
+    <title>ElCírculoMágico-NiñosYNiñas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/620696ba37.js" crossorigin="anonymous"></script>
