--- a/pages/niñosyniñas.html
+++ b/pages/niñosyniñas.html
@@ -11,39 +11,39 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/620696ba37.js" crossorigin="anonymous"></script>
 </head>
-<body id="fondogalaxia">
+<body>
     <header> <!--Información de Bienvenida-->
-        
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="../index.html">Inicio </a>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="niñosyniñas.html">Niños y Niñas </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link"href="agenteseducativos.html">Agentes Educativos </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link"href="contacto.html">Contacto  </a>
-                  </li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light "style="background-color: background: #CAC531; background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  
+        background: linear-gradient(to right, #F3F9A7, #CAC531);">
+          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
+              <li class="nav-item active">
+                <a class="nav-link" href="niñosyniñas.html">Niños y Niñas <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="agenteseducativos.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                  Agentes Educativos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                  <li><a class="dropdown-item" href="#">Contenidos</a></li>
+                  <li><a class="dropdown-item" href="#">Herramientas Digitales</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">¡Conoce nuestros talleres!</a></li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-              </div>
-            </div>
-          </nav>           
-        <nav>
-        <ul class="menu"> 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
             
         <section id="fondogalaxia">
             <h1 class="Other">El círculo mágico para niños y niñas</h1>
@@ -203,7 +203,8 @@
     </ul>
     </div> 
 </footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>    
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>   
 </body>
 </html>
