Avances en el Index

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       <section id="container-fluid-principal"> 
         <h1 class="PrincipalText">El círculo mágico</h1>
         <h2 class="SubPrincipal"> Una experiencia del Aprendizaje a través del juego para la primera infancia</h2>
-      </section>
-                 
+      </section>             
     </header>
 <main>
     <section class="IntroIndex"><!--Sección principal y de bienvenida-->
@@ -75,14 +74,18 @@
                 <div class="row-Niñxs">
                   <div class="col-12"> <h2>Niños y Niñas</h2></div>
                   <div class="row">
-                    <div class="col-6"><p>Información de las actividades para los niños y niñas Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum labore, earum ut ipsam possimus ducimus quod dolor quos quia quasi hic reiciendis inventore, aspernatur ipsa laudantium minus? Corporis, quisquam?</p></div>
-                    <div class="col-6"><h3>Actividades</h3>
-                      <li> <a href="" > Edades de 0 a 12 meses</a></li>
-                      <li> <a href="" > Edades de 12 a 18 meses</a></li>
-                      <li> <a href="" > Edades de 2 a 3 años</a></li>
-                      <li> <a href="" > Edades de 3 a 4 años</a></li></div>
-                  </div>
-                </div>
+                    <div class="col-7"><p>Información de las actividades para los niños y niñas Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum labore, earum ut ipsam possimus ducimus quod dolor quos quia quasi hic reiciendis inventore, aspernatur ipsa laudantium minus? Corporis, quisquam?</p></div>
+                    <div class="card col-5" style="width: 18rem;">
+                        <div class="card-body">
+                        <h5 class="card-title">Actividades</h5>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="" > Edades de 0 a 12 meses</a></li>
+                        <li class="list-group-item"><a href="" > Edades de 12 a 18 meses</a></li>
+                        <li class="list-group-item"><a href="" >  Edades de 2 a 3 años</a></li>
+                        <li class="list-group-item"><a href="" > Edades de 3 a 4 años</a></li>
+                      </ul>
+                    </div>
               </div>
     </section> 
 
@@ -95,9 +98,8 @@
                     <button type="button" class="btn btn-primary btn-lg"> Ingresar </button> <a href="botón1"> </a>
                </div>
             </div>
-              <div class="col-8"> <img src="img/CP.jpg" class="rounded-pill" width="100%" alt="Madres y padres con sus hijxs"></div>
-            </div>
-          
+            <div class="col-8"> <img src="img/CP.jpg" class="rounded-pill" width="100%" alt="Madres y padres con sus hijxs"></div>
+        </div>    
     </section>   
 
     <Section class="AgentesE"><!--Información general de la sección para agentes educativos-->
@@ -107,7 +109,7 @@
                 <h3>Agentes Educativos</h3>
                 <div class="row">
                   <div class="col-8 col-sm-6">
-                    <img src="img/Agentes Educativos.jpg" class="img-thumbnail" width="100%" alt="Agentes educativos, docentes y directivos">
+                    <img src="https://images.unsplash.com/photo-1461344577544-4e5dc9487184?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="img-thumbnail" width="100%" alt="Agentes educativos, docentes y directivos">
                   </div>
                   <div class="col-4 col-sm-6"> 
                     <p>Información para agentes educativos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam iusto, numquam facilis eum quos ab sequi repellendus aspernatur dolorem impedit temporibus minima, nesciunt doloribus delectus voluptatum praesentium, perferendis quod possimus?</p>
@@ -116,7 +118,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>       
     </section>
 </main>
 
