--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             Agentes Educativos
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-            <li><a class="dropdown-item" href="#">Contenidos</a></li>
-            <li><a class="dropdown-item" href="#">Herramientas Digitales</a></li>
+            <li><a class="dropdown-item" href="pages/agenteseducativos.html">Contenidos</a></li>
+            <li><a class="dropdown-item" href="pages/agenteseducativos.html">Herramientas Digitales</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">¡Conoce nuestros talleres!</a></li>
+            <li><a class="dropdown-item" href="pages/agenteseducativos.html">¡Conoce nuestros talleres!</a></li>
           </ul>
         </li>
         <li class="nav-item">
