--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <section id="container-fluid-principal"> 
-      <h1 class="PrincipalText">El círculo mágico</h1>
-      <h2 class="SubPrincipal"> Una experiencia del Aprendizaje a través del juego para la primera infancia</h2>
-    </section>      
+  </nav>
+  <!--Imagen principal-->
+  <!--Jumbotron-->
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-1">Círculo Mágico</h1>
+      <p class="lead">Una experiencia del Aprendizaje a través del juego para la primera infancia</p>
+    </div>
+  </div>
+
   </header>
   
 <main>
