--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,9 +45,11 @@
           </ul>
         </div>
       </nav>
-          <section id="fondogalaxia"> 
-            <h1 class="Other">¿Quiénes somos?</h1>
-            <h2>Conócenos y ponte en contacto con nosotros</h2>
+      <div class="jumbotronNN jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-1__NN">Contacto</h1>
+        </div>
+    </div>
            
     </header>
     
