--- a/pages/cuidadoresprimarios.html
+++ b/pages/cuidadoresprimarios.html
@@ -46,10 +46,12 @@
             </ul>
           </div>
         </nav>
-        <section id="fondogalaxia">
-            <h1 class="Other">Cuidadores primarios</h1>
-            <h2 class="Top">Aprendiendo a generar círculos mágicos</h2>
-            </section> 
+
+        <div class="jumbotronNN jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-1__NN">Cuidadores primarios</h1>
+        </div>
+    
     </header>
     <main id="gradiente1">
             <section class="IntroCp">
