--- a/pages/niñosyniñas.html
+++ b/pages/niñosyniñas.html
@@ -44,9 +44,11 @@
             </ul>
           </div>
         </nav>
-        <section id="fondogalaxia">
-            <h1 class="Other">El círculo mágico para niños y niñas</h1>
-        </section> 
+        <div class="jumbotronNN jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-1__NN">Niños y Niñas</h1>
+            </div>
+          </div>
     </header>
 
 <main id="gradiente1">
