--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
   <header> <!--Información de Bienvenida-->        
     <!--Menú de navegación-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light "style="background-color: background: #CAC531; background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  
-    background: linear-gradient(to right, #F3F9A7, #CAC531);">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"style="background: #0f0c29;  
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29)">
       <a class="navbar-brand" href="index.html">Inicio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,29 +59,25 @@
   </header>
   
 <main>
-    <section class="IntroIndex"><!--Sección principal y de bienvenida-->
-        <div class="container__SectionIndex">
-            <div class="row">
-                <div class="col-sm-12"><!--Video Introductorio a la página-->
-                    <iframe width="100%" height="450" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="IntroIndex__info"><!--En un cuadro a la derecha se pondra la misión y visión-->
-                    <h3>Misión</h3>
-                    <p>Aquí debería de decir la misión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam vitae sapiente voluptatem officiis molestiae omnis maiores repudiandae eos corrupti voluptatibus iste ex reiciendis, doloribus odit veniam officia id tempore!</p>
-                    <h3>Visión</h3>
-                    <p>Aquí debería de decir la visión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consectetur vel doloribus harum iure adipisci nostrum distinctio ipsa est odit provident error expedita eos aperiam dicta officiis ipsam, sint non. </p>
-            </div>
-        </div>    
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-7 col-lg-8"><iframe width="100%" height="450" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      <div class="col-sm-12 col-md-5 col-lg-4"><h3>Misión</h3>
+        <p>Aquí debería de decir la misión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam vitae sapiente voluptatem officiis molestiae omnis maiores repudiandae eos corrupti voluptatibus iste ex reiciendis, doloribus odit veniam officia id tempore!</p>
+        <h3>Visión</h3>
+        <p>Aquí debería de decir la visión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consectetur vel doloribus harum iure adipisci nostrum distinctio ipsa est odit provident error expedita eos aperiam dicta officiis ipsam, sint non. </p></div>
+    </div>
+    
     </section>
 
     <section class="Niñxs"> <!--Información general de la sección para niños y niñas-->
         <article>
-            <div class="container__SectionNiñxs">
+            <div class="container-fluid__SectionNiñxs">
                 <div class="row-Niñxs">
-                  <div class="col-12"> <h2>Niños y Niñas</h2></div>
+                  <div class="col-sm-12"> <h2>Niños y Niñas</h2></div>
                   <div class="row">
-                    <div class="col-7"><p>Información de las actividades para los niños y niñas Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum labore, earum ut ipsam possimus ducimus quod dolor quos quia quasi hic reiciendis inventore, aspernatur ipsa laudantium minus? Corporis, quisquam?</p></div>
-                    <div class="card col-5" style="width: 18rem;">
+                    <div class="col-sm-12 col-md-7 col-lg-8"><p>Información de las actividades para los niños y niñas Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laborum labore, earum ut ipsam possimus ducimus quod dolor quos quia quasi hic reiciendis inventore, aspernatur ipsa laudantium minus? Corporis, quisquam?</p></div>
+                    <div class="card col-sm-12 col-md-5 col-lg-4" style="width: 18rem;">
                         <div class="card-body">
                         <h5 class="card-title">Actividades</h5>
                       </div>
@@ -97,13 +94,13 @@
     <section class="CuidadoresP"><!--Información general de la sección para cuidadores primarios-->
         <div class="container">
             <div class="row">
-                <div class="col-9"> <h3 >Cuidadores Primarios</h3></div>
-                <div class="col-4"><p>Información para cuidadores primarios Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi error, maiores obcaecati tempore id quas dolorum iste repellendus et ullam quis beatae! Ex fugiat voluptatem ratione officia fuga quaerat!</p> 
+                <div class="col-sm-12 "> <h3 >Cuidadores Primarios</h3></div>
+                <div class="col-sm-12 col-md-4 col-lg-5"><p>Información para cuidadores primarios Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi error, maiores obcaecati tempore id quas dolorum iste repellendus et ullam quis beatae! Ex fugiat voluptatem ratione officia fuga quaerat!</p> 
                     <div class="CuidadoresP_Texto__Boton">
-                    <button type="button" class="btn btn-primary btn-lg"> Ingresar </button> <a href="botón1"> </a>
+                    <button type="button" class="btn btn-primary btn-lg" > Ingresar </button> <a href="botón1"> </a>
                </div>
             </div>
-            <div class="col-8"> <img src="img/CP.jpg" class="rounded-pill" width="100%" alt="Madres y padres con sus hijxs"></div>
+            <div class="col-sm-12 col-md-8 col-lg-7"> <img src="img/CP.jpg" class="rounded-pill" width="100%" alt="Madres y padres con sus hijxs"></div>
         </div>    
     </section>   
 
@@ -113,10 +110,10 @@
               <div class="col-sm-12">
                 <h3>Agentes Educativos</h3>
                 <div class="row">
-                  <div class="col-8 col-sm-6">
+                  <div class="col-sm-12 col-md-7 col-lg-6">
                     <img src="https://images.unsplash.com/photo-1461344577544-4e5dc9487184?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="img-thumbnail" width="100%" alt="Agentes educativos, docentes y directivos">
                   </div>
-                  <div class="col-4 col-sm-6"> 
+                  <div class="col-sm-12 col-md-5 col-lg-6"> 
                     <p>Información para agentes educativos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam iusto, numquam facilis eum quos ab sequi repellendus aspernatur dolorem impedit temporibus minima, nesciunt doloribus delectus voluptatum praesentium, perferendis quod possimus?</p>
                     <button type="button" class="btn btn-primary btn-lg">Ingresar</button> <a href="botón2"> </a>
                   </div>
@@ -128,20 +125,45 @@
 </main>
 
     <footer><!--Contactos y redes sociales-->
-        <article><h4>Contacto</h4>
+      <div class="container">
+        <div class="row ">
+          <div class="col-6">
+            <h4>Contacto</h4>
+          </div>
+          <div class="col-6">
+            <h4>Redes sociales</h4>
+          </div>
+        </div>
+        <div class="row ">
+          <div class="col-6">
+            <div><a href="">Correo electronico</a></div>
+            <div><a href="">WhatsApp</a></div>
+          </div>
+          <div class="col-2">
+            <a href="">Facebook<i class="fab fa-facebook"></i>
+          </div>
+          <div class="col-2">
+            <a href="">Instragram<i class="fab fa-instagram"></i>
+          </div>
+          <div class="col-2">
+            <a href="">YouTube<i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+        <!-- <article><h4>Contacto</h4>
             <div>
-                <a href="">Correo electronico</a>
-                <a href="">WhatsApp</a>
+              <div><a href="">Correo electronico</a></div>
+              <div> <a href="">WhatsApp</a></div>
             </div>
         </article>
         <div>  
         <h4>Redes sociales</h4>
-       <ul>
-            <li><a href="">Facebook <i class="fab fa-facebook"></i></li>
+       <ul class="icon-bar">
+            <li><a href="">Facebook <i class="fab fa-facebook" ></i></li>
             <li><a href="">Instragram <i class="fab fa-instagram"></i></li> 
             <li><a href="">YouTube <i class="fab fa-youtube"></i></a></li>
         </ul>
-        </div> 
+        </div>  -->
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
