--- a/pages/niñosyniñas.html
+++ b/pages/niñosyniñas.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     <header> <!--Información de Bienvenida-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light "style="background-color: background: #CAC531; background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  
-        background: linear-gradient(to right, #F3F9A7, #CAC531);">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
           <a class="navbar-brand" href="../index.html">Inicio</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +47,7 @@
             <div class="container">
               <h1 class="display-1__NN">Niños y Niñas</h1>
             </div>
-          </div>
+        </div>
     </header>
 
 <main id="gradiente1">
@@ -189,19 +188,31 @@
 </main>
 
 <footer><!--Contactos y redes sociales-->
-    <article><h4>Contacto</h4>
-        <div>
-            <a href="">Correo electronico</a>
-            <a href="">WhatsApp</a>
+    <div class="container">
+        <div class="row ">
+          <div class="col-6">
+            <h4>Contacto</h4>
+          </div>
+          <div class="col-6">
+            <h4>Redes sociales</h4>
+          </div>
         </div>
-    </article>
-    <div>  
-    <h4>Redes sociales</h4>
-   <ul>
-        <li><a href="">Facebook <i class="fab fa-facebook"></i></li>
-        <li><a href="">Instragram <i class="fab fa-instagram"></i></li> 
-        <li><a href="">YouTube <i class="fab fa-youtube"></i></a></li>
-    </ul>
+        <div class="row ">
+          <div class="col-6">
+            <div><a href="">Correo electronico</a></div>
+            <div><a href="">WhatsApp</a></div>
+          </div>
+          <div class="col-2">
+            <a href="">Facebook<i class="fab fa-facebook"></i>
+          </div>
+          <div class="col-2">
+            <a href="">Instragram<i class="fab fa-instagram"></i>
+          </div>
+          <div class="col-2">
+            <a href="">YouTube<i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
     </div> 
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
