--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,8 +14,7 @@
 
 <body>
     <header> <!--Información de Bienvenida-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light "style="background-color: background: #CAC531; background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  
-      background: linear-gradient(to right, #F3F9A7, #CAC531);">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="../index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -140,20 +139,31 @@
 </main>
 
 <footer><!--Contactos y redes sociales-->
-    <article><h4>Contacto</h4>
-        <div>
-            <a href="">Correo electronico</a>
-            <a href="">WhatsApp</a>
-        </div>
-    </article>
-    <div>  
-    <h4>Redes sociales</h4>
-   <ul>
-        <li><a href="">Facebook <i class="fab fa-facebook"></i></li>
-        <li><a href="">Instragram <i class="fab fa-instagram"></i></li> 
-        <li><a href="">YouTube <i class="fab fa-youtube"></i></a></li>
-    </ul>
-    </div> 
+  <div class="container">
+    <div class="row ">
+      <div class="col-6">
+        <h4>Contacto</h4>
+      </div>
+      <div class="col-6">
+        <h4>Redes sociales</h4>
+      </div>
+    </div>
+    <div class="row ">
+      <div class="col-6">
+        <div><a href="">Correo electronico</a></div>
+        <div><a href="">WhatsApp</a></div>
+      </div>
+      <div class="col-2">
+        <a href="">Facebook<i class="fab fa-facebook"></i>
+      </div>
+      <div class="col-2">
+        <a href="">Instragram<i class="fab fa-instagram"></i>
+      </div>
+      <div class="col-2">
+        <a href="">YouTube<i class="fab fa-youtube"></i>
+      </div>
+    </div>
+  </div>
 </footer>    
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
