Comienza Proyecto final

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </main>
 
     <footer><!--Contactos y redes sociales-->
-      <div class="container">
+      <div class="container-fluid__footer">
         <div class="row ">
           <div class="col-6">
             <h4>Contacto</h4>
