Cambios en el nav

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,15 +14,23 @@
 
 <body>
     <header> <!--Información de Bienvenida-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="../index.html">Inicio</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top container-fluid"style="background: #0f0c29;  
+      background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+      background: linear-gradient(to right, #24243e, #302b63, #0f0c29)">
+      <a class="navbar-brand" href="/img/logoSolo.svg">
+        <img src="/img/Logotipo.svg" alt="logo" style="width: 80px;">
+      </a>
+        <a class="navbar-brand" href="contacto.html">Contacto</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
-            <li class="nav-item active">
-              <a class="nav-link" href="niñosyniñas.html">Niños y Niñas <span class="sr-only">(current)</span></a>
+          <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height:100px;">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="niñosyniñas.html" tabindex="-1" aria-disabled="true">Niños y Niñas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios</a>
@@ -38,12 +46,11 @@
                 <li><a class="dropdown-item" href="agenteseducativos.html">¡Conoce nuestros talleres!</a></li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
-            </li>
+            
           </ul>
         </div>
-      </nav>
+    </nav>
+
       <div class="jumbotronNN jumbotron-fluid">
         <div class="container">
           <h1 class="display-1__NN">Contacto</h1>
