--- a/pages/cuidadoresprimarios.html
+++ b/pages/cuidadoresprimarios.html
@@ -15,38 +15,41 @@
 <body>
     <header> <!--Información de Bienvenida-->
         
-        <nav class="navbar navbar-expand-lg navbar-light bg-light "style="background: #4b6cb7;  
-        background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  
-        background: linear-gradient(to right, #182848, #4b6cb7)">
-          <a class="navbar-brand" href="../index.html">Inicio</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
-              <li class="nav-item active">
-                <a class="nav-link" href="niñosyniñas.html">Niños y Niñas <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="agenteseducativos.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                  Agentes Educativos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="agenteseducativos.html">Contenidos</a></li>
-                  <li><a class="dropdown-item" href="agenteseducativos.html">Herramientas Digitales</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="agenteseducativos.html">¡Conoce nuestros talleres!</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top container-fluid"style="background: #0f0c29;  
+      background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+      background: linear-gradient(to right, #24243e, #302b63, #0f0c29)">
+      <a class="navbar-brand" href="/img/logoSolo.svg">
+        <img src="/img/Logotipo.svg" alt="logo" style="width: 80px;">
+      </a>
+        <a class="navbar-brand" href="cuidadoresprimarios.html">Cuidadores primarios</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height:100px;">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="niñosyniñas.html">Niños y Niñas</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="agenteseducativos.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                Agentes Educativos
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="agenteseducativos.html">Contenidos</a></li>
+                <li><a class="dropdown-item" href="agenteseducativos.html">Herramientas Digitales</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="agenteseducativos.html">¡Conoce nuestros talleres!</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
 
         <div class="jumbotronNN jumbotron-fluid">
             <div class="container">
