--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 <body>
   <header> <!--Información de Bienvenida-->        
     <!--Menú de navegación-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"style="background: #0f0c29;  
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top container-fluid"style="background: #0f0c29;  
     background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
     background: linear-gradient(to right, #24243e, #302b63, #0f0c29)">
+    <a class="navbar-brand" href="/img/logoSolo.svg">
+      <img src="/img/Logotipo.svg" alt="logo" style="width: 80px;">
+    </a>
       <a class="navbar-brand" href="index.html">Inicio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
-          <li class="nav-item active">
+        <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height:100px;">
+          <li class="nav-item">
             <a class="nav-link" href="pages/niñosyniñas.html">Niños y Niñas <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
