--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
         </ul>
       </div>
   </nav>
-  <!--Imagen principal-->
+  </header>
+  
+<main>
+   <!--Imagen principal-->
   <!--Jumbotron-->
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
+  <div class="jumbotron__Inicio">
+    <div class="container-fluid">
       <h1 class="display-1">Círculo Mágico</h1>
       <p class="lead">Una experiencia del Aprendizaje a través del juego para la primera infancia</p>
     </div>
   </div>
 
-  </header>
-  
-<main>
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-7 col-lg-8"><iframe width="100%" height="450" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -127,34 +127,34 @@
     </section>
 </main>
 
-    <footer><!--Contactos y redes sociales-->
-      <div class="container-fluid__footer">
-        <div class="row ">
-          <div class="col-6">
-            <h4>Contacto</h4>
-          </div>
-          <div class="col-6">
-            <h4>Redes sociales</h4>
-          </div>
+<footer><!--Contactos y redes sociales-->
+  <div class="container">
+      <div class="row ">
+        <div class="col-6">
+          <h4>Contacto</h4>
         </div>
-        <div class="row ">
-          <div class="col-6">
-            <div><a href="">Correo electronico</a></div>
-            <div><a href="">WhatsApp</a></div>
-          </div>
-          <div class="col-2">
-            <a href="">Facebook<i class="fab fa-facebook"></i>
-          </div>
-          <div class="col-2">
-            <a href="">Instragram<i class="fab fa-instagram"></i>
-          </div>
-          <div class="col-2">
-            <a href="">YouTube<i class="fab fa-youtube"></i>
-          </div>
+        <div class="col-6">
+          <h4>Redes sociales</h4>
         </div>
       </div>
-       
-    </footer>
+      <div class="row ">
+        <div class="col-6">
+          <div><a href="">Correo electronico</a></div>
+          <div><a href="">WhatsApp</a></div>
+        </div>
+        <div class="col-2">
+          <a href="">Facebook<i class="fab fa-facebook"></i>
+        </div>
+        <div class="col-2">
+          <a href="">Instragram<i class="fab fa-instagram"></i>
+        </div>
+        <div class="col-2">
+          <a href="">YouTube<i class="fab fa-youtube"></i>
+        </div>
+      </div>
+    </div>
+  </div> 
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
