Se agrego tabla y se hizo cambios

--- a/pages/agenteseducativos.html
+++ b/pages/agenteseducativos.html
@@ -19,7 +19,7 @@
       <a class="navbar-brand" href="/img/logoSolo.svg">
         <img src="/img/Logotipo.svg" alt="logo" style="width: 80px;">
       </a>
-        <a class="navbar-brand" href="contacto.html">Agente educativos</a>
+        <a class="navbar-brand" href="agenteseducativos.html">Agentes educativos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,18 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="cuidadoresprimarios.html">Cuidadores Primarios</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="agenteseducativos.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                Agentes Educativos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="agenteseducativos.html">Contenidos</a></li>
-                <li><a class="dropdown-item" href="agenteseducativos.html">Herramientas Digitales</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="agenteseducativos.html">¡Conoce nuestros talleres!</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true">Contacto</a>
             </li>
-            
           </ul>
         </div>
     </nav>
@@ -58,7 +49,7 @@
     </header>
             <section class="IntroAe">
               <div class="card bg-dark text-center">
-                <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=709&q=80" width="100%" alt="Salón de clase con material de docentes">
+                <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=709&q=80" width="100%" height="550vw" alt="Salón de clase con material de docentes">
                 <div class="card-img-overlay">
                   <h2 class="card-title">¡Bienvenido y Bienvenida Agente educativo!</h2>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, omnis dolorum fuga eligendi voluptas ullam. Consectetur beatae libero magni eaque commodi nesciunt atque tempore quae, harum dolore, minima animi sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure autem praesentium sunt ratione officiis magnam maxime blanditiis ad adipisci dicta consequatur, quidem, tempora ex? Optio qui doloribus quae veniam dicta?</p>
