--- a/pages/cuidadoresprimarios.html
+++ b/pages/cuidadoresprimarios.html
@@ -83,34 +83,40 @@
             </section>
 
             <!--Contenedor de 2 ligas para enviar a otra página con actividades-->
-            <section class="ActividadesCpG"> 
-                    <div class="ActividadesCpG_Titulo">
-                      <h1 class="display-2">Contenidos</h1>
-                    </div>
-                <div class="CerebroAnidado">
+            <div class="container__ActividadesCpGrid">
+              <div class="row">
+                <div class="col-sm-12 text-center">
+                  <h1 class="display-2">Contenidos</h1>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                  <div class="CerebroAnidado">
                     <div class="Cerebro_Anidado_Img"> 
-                        <img class="Brain" src="../multimedia/cerebro.png" width="450" alt="Cerebro">
+                        <img class="Brain" src="../multimedia/cerebro.png" width="600vw" alt="Cerebro">
                     </div>
-                    <button type="button" class="btn btn-primary btn-lg">Emociones del cuidador</button> <a href="botón2"></a>
+                    <button type="button" class="btn btn-primary btn-lg-sm">El cerebro de mi hijx</button> <a href="botón2"></a>
                     <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facilis sequi eos aut molestias velit corrupti eum dignissimos quibusdam repudiandae exercitationem molestiae aliquid et atque, quas nobis tenetur sunt eaque!</p>
                     </div>   
                 </div> 
-                <div class="EmocionesAnidado">
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                  <div class="EmocionesAnidado">
                     <div class="Emociones_Anidado_Img">
-                    <img class="Emotions" src="../multimedia/emociones.png" width="450" alt="Emociones del cuidador">
+                    <img class="Emotions" src="../multimedia/emociones.png" width="600vw" alt="Emociones del cuidador">
                     </div>
-                    <button type="button" class="btn btn-primary btn-lg">Emociones del cuidador</button> <a href="botón2"></a>
+                    <button type="button" class="btn btn-primary btn-lg-sm">Emociones del cuidador</button> <a href="botón2"></a>
                     <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam facilis sequi eos aut molestias velit corrupti eum dignissimos quibusdam repudiandae exercitationem molestiae aliquid et atque, quas nobis tenetur sunt eaque!</p>
                     </div>
                 </div>    
-            </section>
+                </div>
+              </div>
+            </div>
 
             <section class="SostenimientoCp"><!--Contenedor de 1 ligas para enviar a otra página con información importante-->
                 <article>
                     <div class="container-fluid__CP">
                       <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6 ">
-                          <div class="Container__SostenimientoCp__Texto">
+                          <div class="Container-fluid__SostenimientoCp__Texto">
                             <h3>Sostenimiento afectivo</h3>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At provident dolorum necessitatibus? Laboriosam dolor impedit itaque amet, fugiat beatae ipsam ea omnis laborum fugit aut labore quisquam quam sunt nam!</p>
                             <button type="button" class="btn btn-primary btn-lg">Emociones del cuidador</button> <a href="botón2"> </a>
@@ -122,8 +128,7 @@
 
             </section>
 
-            <section class="AprendizajeCpJ">
-                <article>
+            
                   <section class="IntroCp"><!--Contenedor con información sobre el aprendizaje a través del juego-->
                     <div class="container">
                       <div class="row">
@@ -131,7 +136,7 @@
                           <div>
                             <h3>Aprendizaje a través del juego</h3>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At provident dolorum necessitatibus? Laboriosam dolor impedit itaque amet, fugiat beatae ipsam ea omnis laborum fugit aut labore quisquam quam sunt nam!</p><button type="button" class="btn btn-primary btn-lg">Ingresar</button> <a href="botón2"></a>
-                        </div>
+                          </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6">
                           <div class="ApredizajeCpJ__Imagen">
@@ -139,8 +144,10 @@
                         </div>
                       </div>
                     </div>
+                  </section>      
     </main>
-    <footer><!--Contactos y redes sociales-->
+
+  <footer><!--Contactos y redes sociales-->
       <div class="container">
           <div class="row ">
             <div class="col-6">
