--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container__Principal">
     <div class="row">
       <div class="col-sm-12 col-md-7 col-lg-8"><iframe width="100%" height="450" src="https://www.youtube.com/embed/YXw10kZm0CA" frameborder="150" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       <div class="col-sm-12 col-md-5 col-lg-4"><h3>Misión</h3>
@@ -70,12 +70,12 @@
         <h3>Visión</h3>
         <p>Aquí debería de decir la visión: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consectetur vel doloribus harum iure adipisci nostrum distinctio ipsa est odit provident error expedita eos aperiam dicta officiis ipsam, sint non. </p></div>
     </div>
-    
+  </div> 
     </section>
 
     <section class="Niñxs"> <!--Información general de la sección para niños y niñas-->
         <article>
-            <div class="container-fluid__SectionNiñxs">
+            <div class="container__SectionNiñxs">
                 <div class="row-Niñxs">
                   <div class="col-sm-12"> <h2>Niños y Niñas</h2></div>
                   <div class="row">
