Proyecto Final casi listo

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
    <!--Imagen principal-->
   <!--Jumbotron-->
   <div class="jumbotron__Inicio">
-    <div class="container-fluid">
-      <h1 class="display-1">Círculo Mágico</h1>
+    <div class="container-fluid"></div>
+      <h1 class="display-1 sm-md">Círculo Mágico</h1>
       <p class="lead">Una experiencia del Aprendizaje a través del juego para la primera infancia</p>
     </div>
   </div>
